--- a/Style.css
+++ b/Style.css
@@ -79,6 +79,7 @@ align-items: center;
 
 .main{
     display: flex;
+ 
 
 }
 
@@ -90,6 +91,7 @@ align-items: center;
     display: flex;
     justify-content:end;
     align-items: start;
+
    
  
 
@@ -99,10 +101,11 @@ align-items: center;
     height: calc( 100vh - 150px);
     width: calc(100% - 30%);
    
-    background-image: url(Images/boy.png);
+    background-image: url(Images/boy4.png);
     background-position: right;
     background-repeat: no-repeat;
     background-size: 90vh;
+   
 
 
 }
@@ -144,7 +147,7 @@ align-items: center;
     display: flex;
     justify-content: start;
     align-items: start;
-    gap: 20px;
+    gap: 70px;
   
    
     
@@ -154,7 +157,7 @@ button{
     width: 10rem;
     border: 2px solid white;
     border-radius: 7px;
-    box-shadow: 2px 3px 4px 5px white;
+    box-shadow: 2px 1px 35px -13px #ccc;
  
    
 
@@ -162,6 +165,99 @@ button{
 }
 
 .deepak{
-    color: crimson;
+    color: #ff004f;
     font-size: 5rem;
+}
+
+
+/* ----------------------------------------2nd part -------------------------*/
+
+.mainSecond{
+    display: flex;
+}
+
+
+.leftSecond{
+    height: 80vh;
+    width: 40%;
+   
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 50vh;
+  
+   
+
+}
+
+.rightSecond{
+    height: 80vh;
+    width: 60%;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+ 
+}
+
+.imgDiv{
+    height: 65vh;
+    width: 65%;
+    
+    background-image: url(Images/boy1.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+}
+
+.aboutME{
+margin-top: 80px;
+font-size: 60px;
+
+}
+
+.paragraph{
+  
+    color: #7c7878;
+    letter-spacing: 1px;
+    font-size: 15px;
+    width: 80%;
+    font-size: 14px;
+ 
+
+}
+
+.skilExp{
+    width: 30vw;
+   
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    
+    
+}
+.skilExp div{
+    list-style: none;
+    font-size: 18px;
+    letter-spacing: 3px;
+    color: #b3b3b3;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.skilExp div::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background-color: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.skilExp div.active-link::after{
+    width: 50%;
+
 }
